--- a/lab-text-summarizing-with-chatgpt.ipynb
+++ b/lab-text-summarizing-with-chatgpt.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -60,11 +60,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "/var/folders/d7/f99mzmr12dqbty5ptd50z0dc0000gn/T/ipykernel_6463/2733959966.py:1: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "  prod_review = \"\"\"\n"
+     ]
+    }
+   ],
    "source": [
     "prod_review = \"\"\"\n",
     "Got this panda plush toy for my daughter's birthday, \\\n",
@@ -87,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -96,8 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Summary: \n",
-      "Soft and cute panda plush toy loved by daughter, but smaller than expected for the price. Arrived early, allowing for personal enjoyment before gifting.\n"
+      "Soft, cute panda plush loved by daughter, but smaller than expected for the price. Arrived early, friendly face.\n"
      ]
     }
    ],
@@ -125,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -134,7 +144,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The customer loved the panda plush toy for their daughter's birthday, but felt it was a bit small for the price. However, they were pleasantly surprised by the early delivery.\n"
+      "The customer was pleased with the early delivery of the panda plush toy, but felt it was slightly small for the price paid.\n"
      ]
     }
    ],
@@ -164,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -212,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -221,21 +231,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feedback: The shipping was faster than expected, arriving a day early. Customer suggests offering larger options for the same price.\n"
+      "Feedback: The product arrived a day earlier than expected, allowing the customer to play with it before giving it as a gift.\n"
      ]
     }
    ],
    "source": [
     "prompt = f\"\"\"\n",
-    "Your task is to extract relevant information from \\ \n",
-    "a product review from an ecommerce site to give \\\n",
+    "Your task is to extract relevant information from \n",
+    "a product review from an ecommerce site to give \n",
     "feedback to the Shipping department. \n",
     "\n",
-    "From the review below, delimited by triple quotes \\\n",
-    "extract the information relevant to shipping and \\ \n",
+    "From the review below, delimited by triple quotes \n",
+    "extract the information relevant to shipping and  \n",
     "delivery. Limit to 30 words. \n",
     "\n",
-    "Review: ```{prod_review}```\n",
+    "Review: {prod_review}\n",
     "\"\"\"\n",
     "\n",
     "response = get_completion(prompt)\n",
@@ -251,11 +261,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:38: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "<>:38: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "/var/folders/d7/f99mzmr12dqbty5ptd50z0dc0000gn/T/ipykernel_6463/58617423.py:38: SyntaxWarning: invalid escape sequence '\\ '\n",
+      "  review_4 = \"\"\"\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "review_1 = prod_review \n",
@@ -333,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -342,14 +363,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 Summary: \n",
-      "Adorable panda plush loved by daughter, but small for price. Arrived early, soft and cute. \n",
+      "0 ```\n",
+      "Soft, cute panda plush loved by daughter, but small for price. Arrived early, friendly face. Consider larger options.\n",
+      "``` \n",
       "\n",
-      "1 Great lamp with storage, fast delivery, excellent customer service for missing parts. Easy to assemble. \n",
+      "1 ```\n",
+      "Affordable lamp with storage, fast shipping, excellent customer service for missing parts. Great company that cares.\n",
+      "``` \n",
       "\n",
-      "2 Impressive battery life, small brush head, good deal for $50, generic replacement heads available, leaves teeth feeling clean. \n",
+      "2 ```\n",
+      "Impressive battery life, small head, good deal for $50, generic replacement heads available, leaves teeth feeling clean.\n",
+      "``` \n",
       "\n",
-      "3 Prices fluctuated, quality declined, motor issues after a year, frozen fruits tip for smoothies, brand loyalty. \n",
+      "3 Summary: Price increased post-sale, base quality decreased, motor noise after a year, freezing fruits for smoothies recommended. \n",
       "\n"
      ]
     }
@@ -357,13 +383,13 @@
    "source": [
     "for i in range(len(reviews)):\n",
     "    prompt = f\"\"\"\n",
-    "    Your task is to generate a short summary of a product \\ \n",
+    "    Your task is to generate a short summary of a product \n",
     "    review from an ecommerce site. \n",
     "\n",
-    "    Summarize the review below, delimited by triple \\\n",
+    "    Summarize the review below, delimited by triple\n",
     "    backticks in at most 20 words. \n",
     "\n",
-    "    Review: ```{reviews[i]}```\n",
+    "    Review: {reviews[i]}\n",
     "    \"\"\"\n",
     "\n",
     "    response = get_completion(prompt)\n",
@@ -393,7 +419,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -407,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
